# suspendidos

./: .gitignore  CMakeLists.txt  a.out  cursor.cpp  cursor.h  lote.cpp  lote.h  main.cpp  mingw.bat  procesadorLotes.cpp  procesadorLotes.h  proceso.cpp  proceso.h  windows.bat
.cache/clangd/index/: cursor.cpp.456737C872ED22D3.idx  cursor.h.3497B635DA40A99A.idx  main.cpp.33D9C3C3B76CEA74.idx  process.cpp.0E0A0AA62F5C34DB.idx  process.h.B6EDB63C5D7835AF.idx  processManager.cpp.CC9210262B7A2CF7.idx  processManager.h.3B8B82587B710CD2.idx
define/: cursor.h  kbhitLinux.h  lote.h  newprocesses.h  procesadorLotes.h  proceso.h  process.h  processManager.h
src/: controller.cpp  cursor.cpp  kbhitLinux.cpp  lote.cpp  main.cpp  newprocesses.cpp  procesadorLotes.cpp  proceso.cpp  process.cpp  processManager.cpp
